# logicle

./: Cargo.toml  README.md
logicle-wasm/: .gitignore  Cargo.toml  README.md  index.html
logicle-wasm/src/: lib.rs
src/: lib.rs
